# evops-server-ext

./: .gitmodules  Cargo.toml  LICENSE  README.md
crate/: Cargo.toml
crates/evops-db/: Cargo.toml  diesel.toml
crates/evops-db-backend/: Cargo.toml
crates/evops-db-backend/src/: lib.rs
crates/evops-db-ml/: Cargo.toml
crates/evops-db-ml/src/: lib.rs
crates/evops-db/migrations/00000000000000_diesel_initial_setup/: down.sql  up.sql
crates/evops-db/migrations/2025-05-22-213806_setup/: down.sql  up.sql
crates/evops-db/src/: lib.rs  models.rs  schema.rs  services.rs
crates/evops-db/src/services/: auth.rs  event.rs  tag.rs  user.rs
crates/evops-db/src/services/auth/: list.rs  log_in.rs  sign_up.rs
crates/evops-db/src/services/event/: create.rs  delete.rs  find.rs  list.rs  reorder_images.rs  reserve_image.rs  update.rs
crates/evops-db/src/services/tag/: create.rs  delete.rs  find.rs  list.rs
crates/evops-db/src/services/user/: create.rs  find.rs  list.rs
proto/evops/ml/v1/: ml.proto
