[workspace]
resolver = "3"
members = [
    "crates/*/",
    "crates/evops-db",
    "crates/evops-db-backend",
    "crates/evops-db-ml",
]
exclude = ["evops-client-ext/"]

[workspace.dependencies]
# Local
evops-db = { path = "crates/evops-db/" }
evops-db-ml = { path = "crates/evops-db-ml/" }
evops-db-backend = { path = "crates/evops-db-backend/" }

# Client Extension
evops-models = { path = "evops-client-ext/crates/evops-models/" }

# External
aide = "0.15.0"
axum = "0.8.4"
axum_tonic = "0.4.0"
chrono = "0.4.41"
color-eyre = "0.6.5"
const_format = "0.2.34"
diesel = { version = "2.2.10", features = ["without-deprecated"] }
diesel-async = "0.5.2"
diesel_migrations = "2.2.0"
dotenvy = "0.15.7"
eyre = "0.6.12"
http = "1.3.1"
itertools = "0.14.0"
prost = "0.13.5"
prost-types = "0.13.5"
schemars = { version = "0.9.0", features = ["preserve_order"] }
serde = "1.0.219"
strum = "0.27.1"
thiserror = "2.0.12"
tokio = "1.45.1"
tonic = "0.13.1"
tonic-build = "0.13.1"
tonic-reflection = "0.13.1"
tonic-web = "0.13.1"
tower-http = "0.6.5"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
url = "2.5.4"
uuid = { version = "1.17.0", features = ["fast-rng"] }

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
missing-errors-doc = { level = "allow", priority = 1 }
