[workspace]
resolver = "3"
members = ["crates/*/"]
exclude = ["client-ext/"]

[workspace.dependencies]
# Client Extension
evops-models = { path = "client-ext/crates/evops-models/" }

# External
chrono = "0.4.41"
diesel = { version = "2.2.10", features = ["without-deprecated"] }
diesel-async = "0.5.2"
diesel_migrations = "2.2.0"
eyre = "0.6.12"
itertools = "0.14.0"
tap = "1.0.1"
tracing = "0.1.41"
url = "2.5.4"
uuid = { version = "1.17.0", features = ["fast-rng"] }

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
missing-errors-doc = { level = "allow", priority = 1 }
