[package]
name = "evops-db"
edition = "2024"

[dependencies]
evops-models = { workspace = true }

chrono = { workspace = true }
eyre = { workspace = true }
diesel = { workspace = true, features = ["chrono", "postgres", "uuid"] }
diesel-async = { workspace = true, features = ["postgres"] }
diesel_migrations = { workspace = true }
itertools = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
uuid = { workspace = true, features = ["v7"] }

[lints]
workspace = true
