[package]
name = "evops-db"
edition = "2024"

[dependencies]
chrono = { workspace = true }
diesel = { workspace = true, features = ["chrono", "postgres", "uuid"] }
diesel_migrations = { workspace = true }
diesel-async = { workspace = true, features = ["postgres"] }
evops-models = { workspace = true }
eyre = { workspace = true }
itertools = { workspace = true }
tap = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
uuid = { workspace = true, features = ["v7"] }

[lints]
workspace = true
